textarea overlap fix

--- a/css/style.css
+++ b/css/style.css
@@ -996,7 +996,7 @@ ul.team li.breakline
 }
 textarea.comment
 {
-	width:100% !important;
+	width:98% !important;
 	height:33px;
 	margin-bottom:10px;
 }
